# hybrid-boggle

./: .clang-format  .clang-format-ignore  .gitignore  CLAUDE.md  Dockerfile  README.md  Slow 5x5 Debug.ipynb  b23.c  b23.py  board_id.py  board_id_test.py  boggle-words-12.txt  boggle-words-4.txt  boggle-words-9.txt  boggle-words.txt  boggle.py  boggler.cc  boggler.h  break_all.py  break_all_test.py  bucket_descent.py  build.sh  canonicalize.py  cpp_boggle  eq.py  example.cpp  ibucket_solver.py  ibuckets.cc  ibuckets.h  integration-test.sh  main.py  make_boggle_dict.py  mini-dict.txt  or22.py  or23.py  post.md  pyproject.toml  symmetry.py  symmetry_test.py  trie.cc  (+1 more)
boggle/: anneal.py  arena.py  args.py  board_class_boggler.py  board_id.py  board_id_test.py  boggle.py  boggle_perf.py  boggle_test.py  boggler.py  boggler_test.py  break_all.py  break_all_test.py  breaker.py  breaker_test.py  bucket_descent.py  canonicalize.py  clean_tree.py  clean_tree_test.py  dice.py  dimensional_bogglers.py  equal_ranges.py  equal_ranges_test.py  eval_node.py  eval_node_test.py  eval_tree.py  eval_tree_test.py  eval_tree_toy.py  exhaustive_search.py  find_words.py  hamiltonian.py  hillclimb.py  ibucket_breaker.py  ibucket_breaker_test.py  ibucket_solver.py  ibuckets.py  ibuckets_test.py  ibuckets_tree.py  ibuckets_tree_test.py  letter_grouping.py  (+33 more)
cpp/: arena.cc  arena.h  board_class_boggler.h  boggler.cc  boggler.h  breaker.h  cli.cc  constants.h  cpp_boggle.cc  equal_ranges.h  eval_node.cc  eval_node.h  ibuckets.h  orderly_bound.h  orderly_tree_builder.h  packed_array.h  robin_hood.h  (+6 more)
(+72 files in other folders)
